@@ -1,3 +1,8 @@
+2012-05-08  Hans-Peter Nilsson  <hp@axis.com>
+
+	PR target/53272
+	* gcc.dg/torture/pr53272-1.c, gcc.dg/torture/pr53272-2.c: New test.
+
 2012-05-07  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/53239
